--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
     "@types/papaparse": "^5.3.16",
     "dotenv": "^17.2.0",
     "extract-zip": "^2.0.1",
+    "fastify": "^5.5.0",
     "glob": "^11.0.3",
     "google-auth-library": "^10.1.0",
     "luxon": "^3.7.1",
